fix some images on Safari, hopefully

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 #logo-img {
     width: 30px;
+    height: 30px;
     padding: 10px;
     padding-left: 30px;
 }
