--- a/frontend/src/components/Listings/listings.css
+++ b/frontend/src/components/Listings/listings.css
@@ -55,6 +55,7 @@
 
 .listing-index-image-main {
     width: 20%;
+    height: auto;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
