--- a/frontend/src/components/Reservations/Reservation.css
+++ b/frontend/src/components/Reservations/Reservation.css
@@ -9,6 +9,7 @@
 
 .reservation-index-image {
     width: 30%;
+    height: auto;
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 1.5%;
